# paulie

./: .gitignore  README.md  SECURITY_AUDIT.md  compare.md  install.sh  pyproject.toml  requirements.txt
src/paulie/: __init__.py  audio.py  config.py  daemon.py  filters.py  inject.py  main.py  stt.py  ui.py  ui_gtk.py
